grammar.js
		gsql: $ => repeat($._definition),

		_definition: $ =>
			choice(
				$.create_query,
				$.interpret_query
			),

		create_query: $ => seq(
			caseInsensitive("create"),
			optional(
				seq(caseInsensitive("or"), caseInsensitive("replace"))
			),
			optional(caseInsensitive("distributed")),
			caseInsensitive("query"),
			field("queryName", $.name),
			$.parameter_list,
			caseInsensitive("for"),
			caseInsensitive("graph"),
			field("graphName", $.name),
			optional(
				seq(caseInsensitive("syntax"), caseInsensitive("v2"))
			),
			$.query_body
		),


		parameter_list: $ => seq(
			"(",
			repeat($.query_params),
			")"
		),

		query_params: $ => seq(
			$.query_param,
			optional(
				repeat(seq(",", $.query_param))
			)
		),

		query_param: $ => seq(
			$._type,
			$.name,
			optional(seq("=", $.digit))
		),

		query_body: $ =>
			seq(
				"{",
				repeat($.typedef),
				// optional($.declaration_except_stmts),
				repeat($.query_body_stmts),
				"}"
			),

		query_body_stmts: $ => seq(
			$.query_body_stmt,
			';'
		),

		query_body_stmt: $ => choice(
			$.assign_stmt,
			$.v_set_var_decl_stmt, //!book
			$.decl_stmt,
			$.l_accum_assign_stmt,
			$.g_accum_assign_stmt,
			$.g_accum_accum_stmt,
			$.func_call_stmt,
			$.select_stmt,
			$.query_body_case_stmt,
			$.query_body_if_stmt,
			$.query_body_while_stmt,
			$.query_body_for_each_stmt,
			caseInsensitive("break"),
			caseInsensitive("continue"),
			// updateStmt ,
			// insertStmt ,
			// queryBodyDeleteStmt ,
			$.print_stmt,
			// printlnStmt ,
			// logStmt ,
			// returnStmt, 
			// raiseStmt ,
			// tryStmt 
		),

		assign_stmt: $ => choice(
			seq($.name, "=", $.expr),
			seq($.name, ".", $.name, "=", $.expr)
		),

		l_accum_assign_stmt: $ => seq(
			field('vertexAlias', $.name),
			".",
			$.local_accum_name,
			choice("+=", "="),
			$.expr
		),

		g_accum_assign_stmt: $ => prec(1, seq(
			$.global_accum_name,
			choice("+=", "="),
			$.expr
		)),

		g_accum_accum_stmt: $ => seq(
			$.global_accum_name,
			field("plus_equal", "+="),
			$.expr
		),

		func_call_stmt: $ => choice(
			seq(
				$.name,
				optional(seq(
					"<",
					$._type,
					repeat(seq(",", $._type)),
					">"
				)),
				"(",
				optional($.arg_list),
				")"
			),
			seq(
				choice($.name, $.local_accum_name, $.global_accum_name),
				repeat1(seq(".", $.name, "(", optional($.arg_list), ")")
				)
			)
		),

		gsql_select_block: $ => seq(
			$.gsql_select_clause,
			$.from_clause,
			// optional($.sample_clause),
			optional($.where_clause),
			optional($.accum_clause),
			repeat($.post_accum_clause),
			// optional($.having_clause),
			// optional($.order_clause),
			optional($.limit_clause),
		),
		gsql_select_clause: $ => seq(
			$.name,
			"=",
			caseInsensitive("select"),
			$.name
		),

		from_clause: $ => seq(
			caseInsensitive("from"),
			choice(
				$.step,
				// $.step_v2,
				seq($.path_pattern, repeat(seq(",", $.path_pattern))),
			)
		),

		dml_sub_stmt_list: $ => seq(
			$.dml_sub_stmt,
			repeat(seq(",", $.dml_sub_stmt))
		),

		dml_sub_stmt: $ => choice(
			$.assign_stmt,
			$.func_call_stmt,
			$.g_accum_accum_stmt,
			$.l_accum_accum_stmt,
			$.attr_accum_stmt,
			$.v_accum_func_call,
			$.local_var_decl_stmt,
			$.dml_sub_case_stmt,
			$.dml_sub_if_stmt,
			$.dml_sub_while_stmt,
			$.dml_sub_for_each_stmt,
			caseInsensitive("break"),
			caseInsensitive("continue"),
			// insertStmt,
			// dmlSubDeleteStmt,
			// printlnStmt,
			// logStmt
		),

		l_accum_accum_stmt: $ => seq(
			$.name,
			".",
			$.local_accum_name,
			field("plus_equal", "+="),
			$.expr
		),

		attr_accum_stmt: $ => seq(
			$.name,
			".",
			$.name,
			field("plus_equal", "+="),
			$.expr
		),

		v_accum_func_call: $ => seq(
			field('vertexAlias', $.name),
			".",
			field('localAccumName', $.local_accum_name),
			repeat(seq(
				".",
				field("funcName", $.name),
				"(",
				optional($.arg_list),
				")"
			))
		),
		local_var_decl_stmt: $ => seq(
			$.base_type,
			field("varName", $.name),
			"=",
			$.expr
		),
		dml_sub_if_stmt: $ => prec.left(1, seq(
			caseInsensitive("if"),
			$.condition,
			caseInsensitive("then"),
			$.dml_sub_stmt_list,
			repeat(seq(caseInsensitive("else"), caseInsensitive("if"), $.condition, caseInsensitive("then"), $.dml_sub_stmt_list)),
			optional(seq(caseInsensitive("else"), $.dml_sub_stmt_list)),
			caseInsensitive("end")
		)),

		dml_sub_case_stmt: $ => choice(
			seq(
				caseInsensitive("case"),
				repeat1(seq(caseInsensitive("when"), $.condition, caseInsensitive("then"), $.dml_sub_stmt_list)),
				optional(seq(caseInsensitive("else"), $.dml_sub_stmt_list)),
				caseInsensitive("end")
			),
			seq(
				caseInsensitive("case"),
				$.expr,
				repeat1(seq(caseInsensitive("when"), $.constant, caseInsensitive("then"), $.dml_sub_stmt_list)),
				optional(seq(caseInsensitive("else"), $.dml_sub_stmt_list)),
				caseInsensitive("end")
			)
		),

		dml_sub_while_stmt: $ => seq(
			caseInsensitive("while"),
			$.condition,
			optional(seq(caseInsensitive("limit"), $.simple_size)),
			caseInsensitive("do"),
			$.dml_sub_stmt_list,
			caseInsensitive("end")
		),

		dml_sub_for_each_stmt: $ => seq(
			caseInsensitive("foreach"),
			$.for_each_control,
			caseInsensitive("do"),
			$.dml_sub_stmt_list,
			caseInsensitive("end")
		),

		for_each_control: $ => choice(
			seq(
				choice(
					field("iterationVar", choice($.name, $.local_accum_name, $.global_accum_name)),
					seq("(", field("keyVar", $.name), repeat1(seq(",", field("valueVar", $.name))), ")")
				),
				seq(choice(caseInsensitive("in"), ":"), $.set_bag_expr)
			),
			seq(
				field("iterationVar", choice($.name, $.local_accum_name, $.global_accum_name)),
				caseInsensitive("in"),
				caseInsensitive("range"),
				"[",
				$.expr,
				",",
				$.expr,
				"]",
				optional(seq(".", caseInsensitive("step"), "(", $.expr, ")")))
		),

		post_accum_clause: $ => seq(
			caseInsensitive("post-accum"),
			$.dml_sub_stmt_list
		),
		path_pattern: $ => prec(1, seq(
			$.step_source_set,
			repeat(seq(
				"-",
				"(",
				$.path_edge_pattern,
				optional(seq(":", field("edgeAlias", $.name))),
				")",
				"-",
				$.step_vertex_set
			))
		)),

		step_source_set: $ => prec(1, seq(
			field('vertexSetName', $.name),
			optional(seq(":", field("vertexAlias", $.name)))
		)),

		global_accum_name: $ => seq(
			"@@",
			$.name
		),

		local_accum_name: $ => seq(
			"@",
			$.name
		),

		arg_list: $ => seq(
			$.expr,
			repeat(seq(",", $.expr))
		),

		simple_size: $ => choice(
			repeat1($.digit),
			$.name
		),

		expr: $ => prec.left(5, choice(
			$.name,
			$.global_accum_name,
			// seq($.name, ".", $.name),
			// seq($.name, ".", $.local_accum_name),
			$.name_dot,
			seq($.name, ".", $.name, ".", $.name, "(", optional($.arg_list), ")"),
			seq($.name, ".", $.name, "(", optional($.arg_list), ")", optional(seq(".", caseInsensitive("filter"), "(", $.condition, ")"))),
			// seq($.name, optional(seq("<", $._type, repeat(seq(",", $._type)), ">")), "(", optional(seq($.arg_list, ")"))),
			// seq($.name, ".", $.local_accum_name, repeat1(seq(".", $.name, "(", optional($.arg_list), ")")), optional(seq(".", $.name))),
			// seq($.global_accum_name, repeat1(seq(".", $.name, "(", optional($.arg_list), ")")), optional(seq(".", $.name))),
			seq(caseInsensitive("coalesce"), "(", optional($.arg_list), ")"),
			seq($.aggregator, "(", optional(caseInsensitive("distinct")), $.set_bag_expr, ")"),
			seq(caseInsensitive("isempty"), "(", $.set_bag_expr, ")"),
			prec.left(2, seq($.expr, $.math_operator, $.expr)),
			prec.left(1, seq("-", $.expr)),
			seq("(", $.expr, ")"),
			seq("(", $.arg_list, "->", $.arg_list, ")"),
			seq("[", $.arg_list, "]"),
			$.constant,
			$.set_bag_expr,
			$.func_call_stmt // seq($.name, "(", $.arg_list, ")"),
		)),

		condition: $ => prec.left(1, choice(
			$.expr,
			seq($.expr, $.comparison_operator, $.expr),
			seq($.expr, optional(caseInsensitive("not")), caseInsensitive("in"), $.set_bag_expr),
			seq($.expr, caseInsensitive("is"), optional(caseInsensitive("not")), caseInsensitive("null")),
			seq($.expr, caseInsensitive("between"), $.expr, caseInsensitive("and"), $.expr),
			seq("(", $.condition, ")"),
			seq(caseInsensitive("not"), $.condition),
			seq($.condition, choice(caseInsensitive("and"), caseInsensitive("or")), $.condition),
			choice(caseInsensitive("true"), caseInsensitive("false")),
			seq($.expr, optional(caseInsensitive("not")), caseInsensitive("like"), $.expr)
		)),

		set_bag_expr: $ => prec.left(0, choice(
			$.name,
			$.global_accum_name,
			// seq($.name, ".", $.name),
			// seq($.name, ".", $.local_accum_name),
			$.name_dot,
			seq($.name_dot, repeat(seq(".", $.name, "(", optional($.arg_list), ")"))),
			// seq($.name, ".", $.name, "(", optional($.arg_list), ")", optional(seq(".", caseInsensitive("filter"), "(", $.condition, ")"))),
			// seq($.global_accum_name, repeat(seq(".", $.name, "(", optional($.arg_list), ")"))),
			seq($.set_bag_expr, choice(caseInsensitive("union"), caseInsensitive("intersect"), caseInsensitive("minus")), $.set_bag_expr),
			seq("(", $.arg_list, ")"),
			seq("(", $.set_bag_expr, ")")
		)),

		name_dot: $ => prec.left(1, seq(
			$.name,
			".",
			choice($.name, $.local_accum_name),
			repeat($.name_dot)
		)),

		_type: $ => choice(
			$.base_type
		),

		base_type: $ => choice(
			caseInsensitive("bool"),
			caseInsensitive("int"),
			caseInsensitive("uint"),
			caseInsensitive("float"),
			caseInsensitive("double"),
			caseInsensitive("string"),
			caseInsensitive("bool"),
			seq(caseInsensitive("vertex"), optional(seq("<", $.name, ">"))),
			caseInsensitive("edge"),
			caseInsensitive("jsonobject"),
			caseInsensitive("jsonarray"),
			caseInsensitive("datetime")
		),

		name: $ => /[\p{L}_$][\p{L}\p{Nd}_$]*/, // thanks, java --> https://github.com/tree-sitter/tree-sitter-java/blob/master/grammar.js#:~:text=%5B%5Cp%7BL%7D_%24%5D%5B%5Cp%7BL%7D%5Cp%7BNd%7D_%24%5D*

		constant: $ => choice(
			$.numeric,
			$.string_literal,
			caseInsensitive("true"),
			caseInsensitive("false"),
			caseInsensitive("gsql_uint_max"),
			caseInsensitive("gsql_int_max"),
			caseInsensitive("gsql_uint_min"),
			seq(caseInsensitive("to_datetime"), "(", $.string_literal, ")")
		),

		numeric: $ => choice(
			$.integer,
			$.real
		),

		integer: $ => seq(
			optional('-'),
			repeat1($.digit)
		),

		real: $ => choice(
			seq(optional("-"), seq(".", repeat1($.digit))),
			seq(optional("-"), repeat1($.digit), seq(".", repeat1($.digit))),
		),

		digit: $ => /\d/,

		string_literal: $ => choice(
			seq(
				'"',
				repeat(/[^"&]/),
				'"'
			), seq(
				'\'',
				repeat(/[^'&]/),
				'\''
			)
		),
		math_operator: $ => choice(
			"*",
			"/",
			"%",
			"+",
			"-",
			"<<",
			">>",
			"&",
			" | "
		),

		comparison_operator: $ => choice(
			"<",
			"<=",
			">",
			">=",
			"==",
			"!="
		),

		// http://stackoverflow.com/questions/13014947/regex-to-match-a-c-style-multiline-comment/36328890#36328890
