test/corpus/create_query.txt
=====
Create Query
=====

CREATE QUERY myQuery() FOR GRAPH MyGraph {}

---

(gsql 
    (create_query 
        queryName: (name) 
        (parameter_list) 
        graphName: (name) 
        (query_body)))

=====
Create Query with Params
=====

CREATE QUERY myQuery(INT i, STRING j, DATETIME d) FOR GRAPH MyGraph {}

---

(gsql 
    (create_query 
        queryName: (name) 
        (parameter_list 
            (query_params 
                (query_param (base_type) (name))
                (query_param (base_type) (name))
                (query_param (base_type) (name))))
        graphName: (name) 
        (query_body))) 


=====
Create OR REPLACE Distributed Query
=====

CREATE OR REPLACE DISTRIBUTED QUERY myQuery() FOR GRAPH MyGraph {}

---

(gsql 
    (create_query 
        queryName: (name) 
        (parameter_list)
        graphName: (name) 
        (query_body))) 
