test/corpus/func_call_stmt.txt
===
Func call
===
CREATE OR REPLACE QUERY myQuery()  FOR GRAPH MyGraph {
    func<INT,BOOL>(a1, a2, a3, a4);
}

---

(gsql 
  (create_query queryName: 
    (name) 
    (parameter_list) 
    graphName: 
        (name) 
        (query_body 
        (query_body_stmts 
            (query_body_stmt 
            (func_call_stmt 
                (name) 
                (base_type) 
                (base_type) 
                (arg_list 
                (expr 
                    (name)) 
                (expr 
                    (name)) 
                (expr 
                    (name)) 
                (expr 
                    (name)))))))))
